--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "firebase": "^11.9.1",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
+    "proj4": "^2.19.7",
+    "qs": "^6.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
@@ -17,6 +19,7 @@
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.10.2",
+    "react-toastify": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
