--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "qs": "^6.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1",
     "react-leaflet-draw": "^0.20.0",
